use yad to extract audio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dean") #required
 set(CPACK_PACKAGE_NAME "media-converter") # debian package name
 set(CPACK_PACKAGE_VERSION "1.1")
 set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA, ./script/prerm)
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.34), ffmpeg (>= 7:4.4-6ubuntu5), zenity (>= 3.32.0-7build1)" )
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.34), ffmpeg (>= 7:4.4-6ubuntu5), yad (>= 0.40.0-1)" )
 
 INSTALL(FILES media-converter.desktop DESTINATION share/applications PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_EXECUTE)
 INSTALL(FILES media-converter.sh DESTINATION /usr/local/bin/ PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_EXECUTE)
