--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,6 @@ set(CPACK_DEBIAN_PACKAGE_DEPENDS "ffmpeg, yad" )
 
 INSTALL(FILES media-converter.desktop DESTINATION share/applications PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_EXECUTE)
 INSTALL(FILES media-converter.sh DESTINATION /usr/local/bin/ PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_EXECUTE)
+INSTALL(FILES feedplot.sh DESTINATION /usr/local/bin/ PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_EXECUTE)
 INSTALL(FILES media-converter.png DESTINATION share/icons/hicolor/scalable/apps/ PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_EXECUTE)
 INCLUDE(CPack)
